# guardrail-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md
.buildkite/: pipeline.yml
.cursor/: hooks.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  database.py  main.py  models.py
backend/src/ai_detector/: __init__.py  layanan_llm.py  mesin_deteksi.py  metadata_git.py  pola_kode.py
backend/src/analisis_risiko/: __init__.py  cek_ast_python.py  daftar_aturan.py  mesin.py  tipe_data.py
backend/src/integrasi_buildkite/: __init__.py  klien_anotasi.py  orkestrator.py  verifikasi_webhook.py
backend/src/observabilitas/: __init__.py  fasad.py  pelaksana_sentry.py
backend/src/routes/: __init__.py  analisis_risiko.py  buildkite_webhook.py  deteksi.py
backend/tests/: conftest.py  fixtures_eval_deteksi.json  pengaturan_uji.py  test_analisis_risiko.py  test_buildkite_verifikasi.py  test_kesehatan.py  test_layanan_llm_parse.py  test_mesin_deteksi.py  test_metadata_git.py  test_model_orm.py  test_observabilitas.py  test_pola_kode.py  test_rute_analisis_risiko.py  test_rute_buildkite.py  test_rute_deteksi.py
buildkite/: guardrail-pipeline.example.yml
docs/: AGENSI_VERIFIKASI_QA.md  API.md  BUILDKITE_PIPELINE.md  BUKTI_BUILDKITE.md  CARA_JALANKAN_PROYEK.md  CHECKLIST_BUILDKITE.md  COMPETITION.md  DEVPOST_DRAFT.md  HASIL_EVAL_DETEKSI.md  LANGKAH_SELANJUTNYA_BUILDKITE.md  OBSERVABILITAS_RUNTIME.md  PROJECT.md  ROADMAP.md  TUTORIAL_BUILDKITE.md
frontend/: .env.development  README.md  index.html  (+4 more)
(+10 files in other folders)
