[project]
name = "guardrail-ai-backend"
version = "0.1.0"
description = "Backend API GuardRail AI (hackathon MVP)"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Urutan impor disengaja: set env sebelum `src.*` terpanggil.
"tests/conftest.py" = ["I001"]
